--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.2.0",
+    "marked": "^4.1.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/marked": "^4.0.7",
     "component-docs": "^0.24.0",
     "typescript": "^4.7.4"
   },
