--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
+    "@easyops-cn/docusaurus-search-local": "^0.33.4",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
-    "docusaurus-lunr-search": "^2.2.0",
+    "color": "^4.2.3",
     "marked": "^4.1.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
