--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -12,12 +12,14 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "prepare": "patch-package"
   },
   "dependencies": {
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@easyops-cn/docusaurus-search-local": "^0.33.4",
+    "@material/material-color-utilities": "^0.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
@@ -32,6 +34,7 @@
     "@tsconfig/docusaurus": "^1.0.5",
     "@types/marked": "^4.0.7",
     "component-docs": "^0.24.0",
+    "patch-package": "^6.5.0",
     "typescript": "^4.7.4"
   },
   "browserslist": {
